tests/errors/pattern-macro-invalid-input.ari
meta fn make_pattern(input: token_stream) -> token_stream {
}

enum MaybeI64 {
  None,
  Some(i64),
}

fn main() -> i64 {
  let value = Some(1);
  return match value {
    make_pattern!(Some(_), None) => {
      1
    }
    _ => {
      0
    }
  };
}
